Revert "fix: picker z-index 2 确保在遮罩之上"
This reverts commit 4a4a61fa8ea48a94f708c5c08cd14db3633f28a5.

--- a/public/css/sidebar.scss
+++ b/public/css/sidebar.scss
@@ -208,7 +208,6 @@
   position:absolute;
   left:0;right:0;
   bottom:62px;
-  z-index:2;
   height:65vh;
   overflow:hidden;
   display:flex;
